--- a/Abstraction/Abstraction/Abstraction.csproj
+++ b/Abstraction/Abstraction/Abstraction.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boss.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerBee.cs" />
