--- a/Abstraction/AbstractionTests/AbstractionTests.csproj
+++ b/Abstraction/AbstractionTests/AbstractionTests.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Include="EmployeeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BossTests.cs" />
+    <Compile Include="WorkerBeeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
