--- a/Abstraction/Abstraction/Abstraction.csproj
+++ b/Abstraction/Abstraction/Abstraction.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Boss.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeManager.cs" />
+    <Compile Include="INumberProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerBee.cs" />
