--- a/Abstraction/AbstractionTests/AbstractionTests.csproj
+++ b/Abstraction/AbstractionTests/AbstractionTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BossTests.cs" />
     <Compile Include="EmployeeManager.cs" />
+    <Compile Include="FunWithMathsTests.cs" />
     <Compile Include="WorkerBeeTests.cs" />
   </ItemGroup>
   <ItemGroup>
